cabal-version: 2.4
name:          bfsid
version:       0.1.0.0
license:       MIT

library
  hs-source-dirs:  src
  exposed-modules:
    Joe.Bfs.Ver1
    Joe.Bfs.Ver2
    Joe.Bfs.Ver3
    Joe.Bfs.Ver4
    Joe.Dfs.Ver1
    Tomato.Bfs.Ver1
    Tomato.Bfs.Ver2
    Tomato.Dfs.Ver1
    Tree

  build-depends:
    , base >=4.7 && <5
    , containers  ^>=0.6
    , deepseq ^>=1.4
    , transformers ^>= 0.5

  default-language: Haskell2010

-- test-suite bfsid-test
--   type:           exitcode-stdio-1.0
--   main-is:        Spec.hs
--   hs-source-dirs: test
--   ghc-options:    -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     , base   >=4.7 && <5
--     , bfsid

  -- default-language: Haskell2010

benchmark bench-bfsid
  main-is:       bench/BenchBfsid.hs
  type:          exitcode-stdio-1.0
  build-depends:
    , base >=4.7 && <5
    , tasty-bench ^>=0.3
    , bfsid

  ghc-options: "-with-rtsopts=-A32m --nonmoving-gc"

  default-language: Haskell2010

executable joe-bfsid-v1
  main-is: app/JoeMain.hs
  ghc-options: -O2
  build-depends:
      bfsid
    , base >=4.7 && <5
  default-language: Haskell2010

executable tomato-bfsid-v1
  main-is: app/TomatoMain.hs
  ghc-options: -O2
  build-depends:
      bfsid
    , base >=4.7 && <5
  default-language: Haskell2010